added /me route and changed user model
